# cmake_helloword

./: .gitignore  CMakeLists.txt  README.md
src/: display.cpp
